# DBCore

./: README.md  pyproject.toml
aiodbcore/: __init__.py  exceptions.py  field_types.py  joins.py  main.py  main.pyi  models.py  models.pyi  operators.py  tools.py  utils.py
aiodbcore/providers/: __init__.py  base.py
aiodbcore/providers/postgresql_providers/: asyncpg_provider.py
aiodbcore/providers/sqlite_providers/: aiosqlite_provider.py
examples/: context_manager.py  general.py  grouping.py  grouping_and_joins.py  models.py  multi_connection.py  sync_db.py
src/aiodbcore/: __init__.py  core.py  core_async.py  core_async.pyi  core_sync.py  core_sync.pyi  main.py  main.pyi  models.py  tools.py
src/aiodbcore/providers/: __init__.py  base.py  base_async.py  base_sync.py
src/aiodbcore/providers/postgresql_providers/: asyncpg_provider.py
src/aiodbcore/providers/sqlite_providers/: aiosqlite_provider.py  sqlite3_provider.py
